--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 *.html linguist-language=python
-*.javascript linguist-language=pytho
+*.javascript linguist-language=python
 *.css linguist-language=html
